# stinger-python-utils

./: .gitignore  .python-version  README.md  pyproject.toml
.agents/skills/release/: SKILL.md
.github/workflows/: python-tests.yml  python37.yml
src/stinger_python_utils/: message_creator  message_creator.py  return_codes.py
src/stinger_python_utils/mcp/: __init__.py  __main__.py  plugin.py  server.py
test/: __init__.py  test_message_creator.py
tests/: test_message_creator.py
