[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stinger-python-utils"
version = "0.1.8rc2"
description = "Common utilities for Stinger Python services."
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
dependencies = [
    "pydantic>=2.5.3",
    "pyqttier>=0.2.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
    "stevedore>=5.0",
    "uvicorn>=0.20.0",
]

[project.scripts]
stinger-mcp-server = "stinger_python_utils.mcp.__main__:main"

[tool.uv]
managed = true

[dependency-groups]
dev = [
    "black>=23.3.0",
    "mypy>=1.4.1",
    "pytest>=7.0.0",
]
