[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stinger-python-utils"
version = "0.1.9"
description = "Common utilities for Stinger Python services."
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"

dependencies = [
    "pydantic>=2.5.3",
    "pyqttier>=0.2.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.27.0; python_version >= '3.10'",
    "stevedore>=5.7; python_version >= '3.10'",
    "uvicorn>=0.44.0; python_version >= '3.10'",
]

[project.scripts]
stinger-mcp-server = "stinger_python_utils.mcp.__main__:main"

[tool.uv]
managed = true

[dependency-groups]
dev = [
    "black>=23.3.0",
    "mypy>=1.4.1",
    "pytest>=7.0.0",
]
